export const snapshot = {};

snapshot[`relative_url plugin 1`] = `4`;

snapshot[`relative_url plugin 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
  ],
}
`;

snapshot[`relative_url plugin 3`] = `
{
  content: '<!DOCTYPE html>\\n<html><head></head><body><p>Contact</p>\\n<ul>\\n<li><a href="../..">Index</a></li>\\n<li><a href="..">About us</a></li>\\n<li><a href="">Contact</a></li>\\n<li><a href="../presentation">Presentation</a></li>\\n</ul>\\n</body></html>',
  data: {
    content: "Contact\\n\\n- [Index](/)\\n- [About us](/about-us)\\n- [Contact](/about-us/contact)\\n- [Presentation](/about-us/presentation)\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/about-us/contact/",
  },
  dest: {
    ext: ".html",
    path: "/about-us/contact/index",
  },
  src: {
    ext: ".md",
    path: "/about-us/contact",
  },
}
`;

snapshot[`relative_url plugin 4`] = `
{
  content: '<!DOCTYPE html>\\n<html><head></head><body><p>About us</p>\\n<ul>\\n<li><a href="..">Index</a></li>\\n<li><a href="">About us</a></li>\\n<li><a href="contact">Contact</a></li>\\n<li><a href="presentation">Presentation</a></li>\\n</ul>\\n</body></html>',
  data: {
    content: "About us\\n\\n- [Index](/)\\n- [About us](/about-us)\\n- [Contact](/about-us/contact)\\n- [Presentation](/about-us/presentation)\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/about-us/",
  },
  dest: {
    ext: ".html",
    path: "/about-us/index",
  },
  src: {
    ext: ".md",
    path: "/about-us/index",
  },
}
`;

snapshot[`relative_url plugin 5`] = `
{
  content: '<!DOCTYPE html>\\n<html><head></head><body><p>Presentation</p>\\n<ul>\\n<li><a href="../..">Index</a></li>\\n<li><a href="..">About us</a></li>\\n<li><a href="../contact">Contact</a></li>\\n<li><a href="">Presentation</a></li>\\n</ul>\\n</body></html>',
  data: {
    content: "Presentation\\n\\n- [Index](/)\\n- [About us](/about-us)\\n- [Contact](/about-us/contact)\\n- [Presentation](/about-us/presentation)\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/about-us/presentation/",
  },
  dest: {
    ext: ".html",
    path: "/about-us/presentation/index",
  },
  src: {
    ext: ".md",
    path: "/about-us/presentation",
  },
}
`;

snapshot[`relative_url plugin 6`] = `
{
  content: '<!DOCTYPE html>\\n<html><head></head><body><p>Index</p>\\n<ul>\\n<li><a href="">Index</a></li>\\n<li><a href="about-us">About us</a></li>\\n<li><a href="./about-us/contact">Contact</a></li>\\n<li><a href="about-us/presentation">Presentation</a></li>\\n<li><a href="?ignored=true">Ignored</a></li>\\n<li><a href="#ignored">Ignored</a></li>\\n<li><a href="https://ignored.com">Ignored</a></li>\\n<li><a href="//ignored.com">Ignored</a></li>\\n</ul>\\n</body></html>',
  data: {
    content: "Index\\n\\n- [Index](/)\\n- [About us](about-us)\\n- [Contact](./about-us/contact)\\n- [Presentation](about-us/presentation)\\n- [Ignored](?ignored=true)\\n- [Ignored](#ignored)\\n- [Ignored](https://ignored.com)\\n- [Ignored](//ignored.com)\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    ext: ".md",
    path: "/index",
  },
}
`;
